styles(form): fix slider spacing (#112)

--- a/src/hostedPages/activities/form/form.module.scss
+++ b/src/hostedPages/activities/form/form.module.scss
@@ -66,6 +66,10 @@
   margin-bottom: var(--awell-spacing-8);
 }
 
+.traditional_form_question_slider {
+  margin-bottom: var(--awell-spacing-12);
+}
+
 .trademark {
   font-size: var(--font-size-xs);
   color: var(--awell-slate500);
